# alex

./: .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  generate_new_secret_key.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
alex/: asgi.py  settings.py  urls.py  wsgi.py
alex/settings/: base.py  dev.py  production.py  staging.py
media/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
media/forms/: base.py  books.py
media/migrations/: 0001_initial.py
media/views/: books.py  movies.py  music.py
static/js/media/books/: form_isbn_lookup.js
templates/: _base.html  account.html  account_edit.html  add_book.html  add_from_isbn.html  book.html  books.html  home.html  login.html  logout.html  profile.html  signup.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
