[project]
name = "alex"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob",email = "jacobmeide@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.8.1)",
    "cfgv (==3.4.0)",
    "crispy-bootstrap5 (==2025.6)",
    "distlib (==0.3.9)",
    "django (==5.2.3)",
    "django-crispy-forms (==2.4)",
    "filelock (==3.18.0)",
    "identify (==2.6.12)",
    "nodeenv (==1.9.1)",
    "platformdirs (==4.3.8)",
    "pre-commit (==4.2.0)",
    "pyyaml (==6.0.2)",
    "sqlparse (==0.5.3)",
    "virtualenv (==20.31.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
